# Todo_DockerCompose

./: README.md
.github/workflows/: ci.yml  generate-lock.yml
docker_compose/: compose.yml
docker_compose/todo_dockercompose/: pyproject.toml
docker_compose/todo_dockercompose/app/: main.py
docker_compose/todo_dockercompose/tests/: test_main.py
